syntax = "proto3";

package kallax.tracker;

import "PeerAddress.proto";

service RootchainPeerService {
  rpc Get(GetRootchainPeerAddressesRequest)
      returns (GetRootchainPeerAddressesResponse);

  rpc Insert(InsertRootchainPeerAddressRequest)
      returns (InsertRootchainPeerAddressResponse);
}

message GetRootchainPeerAddressesRequest { string chain_id = 1; }
message GetRootchainPeerAddressesResponse {
  repeated PeerAddress addresses = 1;
}

message InsertRootchainPeerAddressRequest {
  string chain_id = 1;
  PeerAddress address = 2;
}
message InsertRootchainPeerAddressResponse {}
